# raytracer

./: .clang-format  .gitignore  Makefile  README.md  meson.build  premake5.lua
canvas/: bmp.c  bmp.h  canvas.c  canvas.h  color.c  color.h  meson.build  test.c
canvas/include/: bmp.h  canvas.h  color.h
canvas/src/: bmp.c  canvas.c  color.c
docs/: canvas.md  linal.md
include/: canvas.h
linal/: meson.build  vec.c  vec.h
linal/src/: vec.c
raytracer/: array.h  camera.c  camera.h  light.c  light.h  main.c  meson.build  scene.c  scene.h  sphere.c  sphere.h
raytracer/include/: array.h  camera.h  light.h  scene.h  sphere.h
raytracer/src/: camera.c  light.c  main.c  scene.c  sphere.c
src/: Makefile  canvas.c  canvas.h  main.c
tests/: test_canvas.c  test_linal_vec.c
